--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <a href="index.html">Portfolio</a>
           </li>
           <li>
-            <a href="#top">About</a>
+            <a class="active-nav" href="#top">About</a>
           </li>
           <li>
             <a href="#contact">Contact</a>
@@ -97,7 +97,7 @@
           <a href="index.html">Portfolio</a>
         </li>
         <li>
-          <a href="about.html">About</a>
+          <a class="active-nav" href="about.html">About</a>
         </li>
         <li>
           <a href="contact.html">Contact</a>
@@ -135,9 +135,9 @@
 
         <!-- about start -->
         <section class="row-flex">
-          <div id="bg-me" class="one-quarter-width">
+          <div style="display:none;" id="bg-me" class="one-quarter-width">
           </div>
-          <div class="three-quarter-width section-inner">
+          <div class="full-width section-inner">
             <h4 class="section-item">Who am I?</h4>
             <h3 class="section-item">Kind of obsessed with all things digital</h3>
             <p class="section-item">I’m a Christchurch-based UX/UI designer who enjoys exploring what can be achieved in the ever-evolving world of tech. Each design project is a chance to learn and try something new in the digital space; this is something I will never grow tired of.</p>
