--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
             <a href="about.html">About</a>
           </li>
           <li>
-            <a href="contact.html">Contact</a>
+            <a class="active-nav" href="contact.html">Contact</a>
           </li>
         </ul>
       </nav>
@@ -100,7 +100,7 @@
           <a href="about.html">About</a>
         </li>
         <li>
-          <a href="contact.html">Contact</a>
+          <a class="active-nav" href="contact.html">Contact</a>
         </li>
       </ul>
     </nav>
@@ -149,6 +149,10 @@
     <!-- footer start -->
     <footer id="contact" class="white-text">
 
+      <div style="margin-bottom:40px;">
+        <p class="two-third-width"><i>The work contained in this portfolio is created for educational purposes only and does not contain any commercial value. All rights remain with the individual copyright holders unless specified and used with permission.</i></p>
+      </div>
+      
       <div class="copyright">
         <p>&copy; 2024 Nara Won</p>
       </div>
