--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <nav class="menu-item">
         <ul>
           <li>
-            <a href="#top">Portfolio</a>
+            <a class="active-nav" href="#top">Portfolio</a>
           </li>
           <li>
             <a href="about.html">About</a>
@@ -94,7 +94,7 @@
     <nav class="menu-item">
       <ul>
         <li>
-          <a href="index.html">Portfolio</a>
+          <a class="active-nav" href="index.html">Portfolio</a>
         </li>
         <li>
           <a href="about.html">About</a>
@@ -194,7 +194,7 @@
               <div class="project-tag">Branding</div>
             </div>
             <div class="section-item">
-              <a href="#">
+              <a href="pasc.html">
                 <button class="case-study-btn">view case study</button>
               </a>
             </div>
@@ -221,6 +221,10 @@
           </a>
         </div>
         <div style="width:50px;">&nbsp;</div>
+      </div>
+
+      <div style="margin-bottom:40px;">
+        <p class="two-third-width"><i>The work contained in this portfolio is created for educational purposes only and does not contain any commercial value. All rights remain with the individual copyright holders unless specified and used with permission.</i></p>
       </div>
 
       <div class="copyright">
