--- a/nautiqua.html
+++ b/nautiqua.html
@@ -155,7 +155,6 @@
             <p class="thin-padding bigger-body"><b>My Roles</b></p>
             <div class="project-tags thin-padding">
               <div class="project-tag active-tag">Experience Design</div>
-              <div class="project-tag active-tag">Creative Direction</div>
               <div class="project-tag">UI Design</div>
               <div class="project-tag">3D Visualisation</div>
               <div class="project-tag">Research</div>
@@ -191,7 +190,7 @@
             <p class="thin-padding">
               Charis-Eve Ripley: Leader, Graphic Design
               <br>
-              Nara Won: Creative Director, UX/UI
+              Nara Won: Creative Director, UX/UI Design
               <br>
               Monya Malan: Lead Innovator, Web Design
               <br>
@@ -207,10 +206,10 @@
         <div class="three-fifth-width mid-padding">
 
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/n-1.png" alt="">
+            <img class="full-width rounded-img" src="images/nautiqua/n-1.png" alt="">
           </div>
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/nautiqua-thumbnail.jpg" alt="">
+            <img class="full-width rounded-img" src="images/nautiqua/nautiqua-thumbnail.jpg" alt="">
           </div>
 
         </div>
@@ -247,7 +246,7 @@
           
           <!-- stat1 start -->
           <div class="full-width stat small-top">
-            <img class="thin-padding" src="images/stat1.svg" alt="">
+            <img class="thin-padding" src="images/nautiqua/stat1.svg" alt="">
             <div>
               <p class="thin-padding stat-text">of Australians believe New Zealand makes high-quality products</p>
               <p class="thin-padding citation">compared to 50%-60% in other markets</p>
@@ -257,7 +256,7 @@
 
           <!-- stat2 start -->
           <div class="full-width stat small-top">
-            <img class="thin-padding" src="images/stat2.svg" alt="">
+            <img class="thin-padding" src="images/nautiqua/stat2.svg" alt="">
             <div>
               <p class="thin-padding stat-text">of Australians believe New Zealand products are safe</p>
               <p class="thin-padding citation">compared to 50%-60% in other markets</p>
@@ -267,7 +266,7 @@
 
           <!-- stat3 start -->
           <div class="full-width stat small-top">
-            <img class="thin-padding" src="images/stat3.svg" alt="">
+            <img class="thin-padding" src="images/nautiqua/stat3.svg" alt="">
             <div>
               <p class="thin-padding stat-text">NZ products are the second-most trusted in Australia, after Australia itself</p>
               <p class="thin-padding citation">compared to 5-6th ranking in other countries</p>
@@ -298,7 +297,7 @@
 
           <!-- stat4 start -->
           <div class="full-width stat small-top">
-            <img class="thin-padding" src="images/stat4.svg" alt="">
+            <img class="thin-padding" src="images/nautiqua/stat4.svg" alt="">
             <div>
               <p class="thin-padding stat-text">engagement potential for physical advertising in high-income consumers</p>
               <p class="thin-padding citation">(Meyer-Joiner, 2022)</p>
@@ -308,7 +307,7 @@
 
           <!-- stat5 start -->
           <div class="full-width stat small-top">
-            <img class="thin-padding" src="images/stat5.svg" alt="">
+            <img class="thin-padding" src="images/nautiqua/stat5.svg" alt="">
             <div>
               <p class="thin-padding stat-text">of Aussies prioritise health & are willing to invest in health products</p>
               <p class="thin-padding citation">(Room, 2023)</p>
@@ -337,10 +336,10 @@
         </div>
         <div class="three-fifth-width mid-padding">
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/n-2.png" alt="">
+            <img class="full-width rounded-img" src="images/nautiqua/n-2.png" alt="">
           </div>
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/n-3.jpg" alt="">
+            <img class="full-width rounded-img" src="images/nautiqua/n-3.jpg" alt="">
           </div>
         </div>
       </div>
@@ -363,10 +362,10 @@
       <div class="row-flex mid-padding">
 
         <div class="img-wrapper three-fifth-width">
-          <img class="full-width rounded-img" src="images/n-4.png" alt="">
+          <img class="full-width rounded-img" src="images/nautiqua/n-4.png" alt="">
         </div>
         <div class="img-wrapper two-fifth-width">
-          <img class="full-width rounded-img" src="images/n-5.png" alt="">
+          <img class="full-width rounded-img" src="images/nautiqua/n-5.png" alt="">
         </div>
 
       </div>
@@ -427,7 +426,7 @@
           </div>
           <div class="one-quarter-width thin-padding">
             <a class="extra-content-item" href="pasc.html">
-              <img class="full-width" src="images/pasc-thumbnail.png" alt="">
+              <img class="full-width" src="images/pasc/pasc-home-mockup.png" alt="">
             </a>
           </div>
           <div class="half-width thin-padding">&nbsp;</div>
@@ -456,6 +455,10 @@
           </a>
         </div>
         <div style="width:50px;">&nbsp;</div>
+      </div>
+
+      <div style="margin-bottom:40px;">
+        <p class="two-third-width"><i>The work contained in this portfolio is created for educational purposes only and does not contain any commercial value. All rights remain with the individual copyright holders unless specified and used with permission.</i></p>
       </div>
 
       <div class="copyright">
