--- a/pasc.html
+++ b/pasc.html
@@ -137,7 +137,7 @@
 
 
     <!-- CASE STUDY START -->
-    <div id="coral-rescue-case-study" class="case-study">
+    <div id="pasc-case-study" class="case-study">
       
       <!-- first seciton start -->
       <div class="row-flex">
@@ -146,8 +146,8 @@
         <div class="two-fifth-width thick-padding">
           
           <div class="mid-top">
-            <h3 class="thin-padding">Coral Rescue</h3>
-            <h1 class="thin-padding">An illustrated learning experience</h1>
+            <h3 class="thin-padding">Pan-Asian Screen Collective</h3>
+            <h1 class="thin-padding">Connecting with Pan-Asian Practitioners</h1>
           </div>
 
           <!-- roles start -->
@@ -155,8 +155,9 @@
             <p class="thin-padding bigger-body"><b>My Roles</b></p>
             <div class="project-tags thin-padding">
               <div class="project-tag active-tag">Web Design</div>
-              <div class="project-tag">Research</div>
-              <div class="project-tag">Illustration</div>
+              <div class="project-tag active-tag">User Research</div>
+              <div class="project-tag">Social Media</div>
+              <div class="project-tag">Branding</div>
             </div>
           </div>
           <!-- roles finish -->
@@ -167,7 +168,7 @@
             <div class="project-tags thin-padding">
               <div class="project-tag"><i class="fa-brands fa-figma"></i> Figma</div>
               <div class="project-tag">
-                <img class="tool-icon" src="images/coral-rescue/photoshop-icon-coral-rescue.svg" alt=""> Photoshop
+                <img class="tool-icon" src="images/pasc/photoshop-icon-pasc.svg" alt=""> Photoshop
               </div>
             </div>
           </div>
@@ -176,7 +177,7 @@
           <!-- duration start -->
           <div class="full-width small-top">
             <p class="thin-padding bigger-body"><b>Project Duration</b></p>
-            <p class="thin-padding">Sep 25, 2023 &rarr; Nov 17, 2023</p>
+            <p class="thin-padding">Jul 17, 2023 &rarr; Sep 8, 2023</p>
           </div>
           <!-- duration finish -->
 
@@ -187,10 +188,10 @@
         <div class="three-fifth-width mid-padding">
 
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/coral-rescue/cr-1.svg" alt="">
+            <img class="full-width rounded-img" src="images/pasc/pasc-home-mockup.png" alt="">
           </div>
           <div class="img-wrapper">
-            <img class="full-width rounded-img" src="images/coral-rescue/cr-2.png" alt="">
+            <img class="full-width rounded-img" src="images/pasc/p-1.png" alt="">
           </div>
 
         </div>
@@ -203,138 +204,141 @@
       <div class="row-flex full-width mid-padding">
         <div class="one-third-width mid-padding">
           <h5 class="thin-padding">Introduction</h5>
-          <h6 class="thin-padding">The rainforests of the sea need our help</h6>
+          <h6 class="thin-padding">A mission to support Pan-Asian’s in NZ’s screen sector</h6>
         </div>
         <div class="two-third-width mid-padding bigger-body">
-          <p class="thin-padding">Coral reefs are vital, vibrant underwater ecosystems which are facing continuous deterioration due to human interference. In recognising the complex and often gloomy nature of the subject, <b>the goal of Coral Rescue was to create an educational resource that is both comfortable and comprehensible</b> in order to foster understanding towards this pressing issue.</p>
+          <p class="thin-padding">The Pan-Asian Screen Collective (PASC) is a not-for-profit incorporated society; established in 2018. PASC’s mission is to see more stories made by and about our Pan-Asian communities by supporting the careers of Pan-Asian practitioners in New Zealand’s screen sector.</p>
+          <p class="thin-padding">In this project, PASC requested an update to their website and communication channels to better engage with their existing Pan-Asian community, as well as connect with potential funding partners. These updates needed to uphold existing brand guidelines.</p>
         </div>
       </div>
       <!-- intro finish -->
 
-      <video class="full-width" src="videos/cr-v-1.mkv" muted autoplay loop></video>
-
-      <!-- images start -->
-      <div class="full-width row-flex mid-padding">
-        <div class="img-wrapper three-fifth-width">
-          <img class="full-width rounded-img" src="images/coral-rescue/cr-3.png" alt="">
-        </div>
-        <div class="img-wrapper two-fifth-width">
-          <img class="full-width rounded-img" src="images/coral-rescue/cr-4.png" alt="">
-        </div>
-      </div>
-      <!-- images finish -->
-
-      <!-- method start -->
-      <div class="row-flex full-width mid-padding">
-        <div class="one-third-width mid-padding">
-          <h5 class="thin-padding">Method</h5>
-          <h6 class="thin-padding">Illustrated for understanding & emotional comfort</h6>
-        </div>
-        <div class="two-third-width mid-padding bigger-body">
-          <p class="thin-padding">Kozak (2020) tested and verified three hypotheses: that illustration triggers memories and makes content more memorable; illustration elicits emotions and makes experiences more pleasurable; and illustration accelerates perception of content.</p>
-          <p class="thin-padding">Additionally, when photos and artworks were compared for emotional responses, the number of pleasant emotions triggered by artworks increased compared to those triggered by photographs of the same subject, while unpleasant emotions decreased in the same way (Yang et al, 2019). For these reasons, illustration was deemed a suitable medium for making the intricacies of coral decline more accessible and emotionally comfortable for a wider audience.</p>
-        </div>
-      </div>
-      <!-- method finish -->
-
-      <!-- sketches start -->
-      <div class="full-width mid-top">
-        <img class="full-width" src="images/coral-rescue/cr-5.png" alt="">
-      </div>
-      <!-- sketches finish -->
-
-      <!-- colour start -->
+      <!-- testing start -->
       <div class="row-flex full-width mid-top">
+        <div class="three-fifth-width mid-padding">
+          <div class="img-wrapper">
+            <img class="full-width rounded-img" src="images/pasc/p-2.png" alt="">
+          </div>
+          <p style="padding:0 55px;" class="citation">*PASC's pre-existing website</p>
+          <div class="img-wrapper">
+            <img class="full-width rounded-img" src="images/pasc/p-3.png" alt="">
+          </div>
+          <p style="padding:0 55px;" class="citation">*PASC's pre-existing communication channels: monthly Pānui (newsletter), Instagram/Facebook, Linktree</p>
+        </div>
         <div class="two-fifth-width thick-padding">
-          <h5 class="thin-padding">Colour</h5>
-          <h6 class="thin-padding">Painted according to comfort & comprehensibility</h6>
+          <h5 class="thin-padding">User Research</h5>
+          <h6 class="thin-padding">Users wanted information to be more accessible</h6>
           <p class="thin-padding bigger-body">
-            The reality of our planet’s deterioration can be a daunting topic. With that in mind, the colour palette was crafted to make the information approachable and easy to digest. Blue takes centre stage to provide a calm, stable backdrop. The pink accents serve to draw the eye and infuse additional warmth into the scenes.
+            User-testing PASC’s existing website and communication channels found the following pain points to tackle:
+          </p>
+          <p class="">
+            <ul>
+              <li class="thin-padding bigger-body">
+                Hierarchy can be inconsistent and confusing; difficult to skim-read or find relevant information quickly
+              </li>
+              <li class="thin-padding bigger-body">
+                PASC’s purpose and target audience can be more clearly indicated
+              </li>
+              <li class="thin-padding bigger-body">
+                The definition of “Pan-Asian” was not obvious to new website users
+              </li>
+              <li class="thin-padding bigger-body">
+                PASC’s interest in funding partners was not obvious
+              </li>
+              <li class="thin-padding bigger-body">
+                Branding was not consistent, leading to confusion about what was connected to PASC
+              </li>
+            </ul>
           </p>
         </div>
-        <div class="three-fifth-width mid-padding">
-          <div class="full-width img-wrapper">
-            <img class="full-width rounded-img" src="images/coral-rescue/cr-palette.svg" alt="">
-          </div>
-        </div>
       </div>
-      <!-- colour finish finish -->
+      <!-- testing finish -->
 
-      <!-- colour scenes start -->
-      <div class="full-width row-flex mid-padding">
-        <div class="half-width img-wrapper">
-          <video class="full-width rounded-img thick-top" src="videos/cr-v-2.mp4" muted loop autoplay></video>
-          <p class="mid-padding bigger-body">Desaturation of colour was utilised to communicate the negative consequences of coral reef decline.</p>
-        </div>
-        <div class="half-width">
-          <div class="full-width img-wrapper">
-            <img class="full-width rounded-img" src="images/coral-rescue/cr-6.svg" alt="">
-          </div>
-          <div class="full-width img-wrapper">
-            <img class="full-width small-top rounded-img" src="images/coral-rescue/cr-7.svg" alt="">
-          </div>
-        </div>
+      <!-- lofi start -->
+      <div class="full-width thick-top">
+        <img class="full-width" src="images/pasc/p-4.png" alt="">
       </div>
-      <!-- colour scenes finish -->
+      <!-- lofi finish -->
 
-      <!-- format start -->
+      <!-- websiteblurb start -->
       <div class="row-flex full-width mid-padding">
         <div class="one-third-width mid-padding">
-          <h5 class="thin-padding">Format</h5>
-          <h6 class="thin-padding">Tailoring to user behaviour & needs</h6>
+          <h5 class="thin-padding">Website</h5>
+          <h6 class="thin-padding">Allowing users to find what they need</h6>
         </div>
         <div class="two-third-width mid-padding bigger-body">
-          <p class="thin-padding">Explainable and promotive illustrations outperform decorational illustrations (Luo & Lin, 2017); in other words, <b>illustrations in a learning context cannot be used in isolation—another form of communication is necessary to explain them.</b></p>
-          <p class="thin-padding">Guided by this information, I explored different formats which support the combination of illustrations paired with written communication. The website format emerged as the most effective, as it limited the scope of vision, which prevented overwhelming the user, and provided interactivity, which maintained attention. Additionally, this was the most preferred format among users due to its convenience.</p>
-          <p class="thin-padding">The website was then refined through the incorporation of motion and interactivity to make better use of the medium and create a cohesive final product.</p>
+          <p class="thin-padding">Thus began the iterative process of prototyping and user testing to address pain points. Information was reorganised to place key information where users expected to find it. Where users previously had to click into multiple layers of pages to find what they were looking for, the navigation now became streamlined to fit their needs, allowing users to navigate the site more efficiently.</p>
         </div>
       </div>
-      <!-- format finish -->
+      <!-- websiteblurb finish -->
 
-      <!-- rows start -->
-      <div class="full-width mid-padding">
-
-        <!-- row1 start -->
-        <div class="full-width row-flex">
-          <div class="half-width img-wrapper">
-            <img class="full-width rounded-img" src="images/coral-rescue/cr-8.svg" alt="">
-          </div>
-          <div class="half-width img-wrapper">
-            <video class="full-width rounded-img" src="videos/cr-v-3.mp4" muted loop autoplay></video>
-          </div>
-        </div>
-        <!-- row1 finish -->
-
-        <!-- row2 start -->
-        <div class="full-width row-flex small-top">
-          <div class="img-wrapper three-fifth-width">
-            <video class="full-width rounded-img" src="videos/cr-v-4.mp4" muted loop autoplay></video>
-          </div>
-          <div class="img-wrapper two-fifth-width">
-            <img class="full-width rounded-img" src="images/coral-rescue/cr-9.svg" alt="">
-          </div>
-        </div>
-        <!-- row2 finish -->
-
-        <!-- row3 start -->
-        <div class="full-width row-flex small-top">
-          <div class="half-width img-wrapper">
-            <video class="full-width rounded-img" src="videos/cr-v-5.mp4" muted loop autoplay></video>
-          </div>
-          <div class="half-width img-wrapper">
-            <video class="full-width rounded-img" src="videos/cr-v-6.mp4" muted loop autoplay></video>
-          </div>
-        </div>
-        <!-- row3 finish -->
-
+      <!-- longwebsite start -->
+      <div class="full-width small-top">
+        <img class="full-width" src="images/pasc/p-5.png" alt="">
       </div>
-      <!-- rows finish -->
+      <!-- long-website finish -->
 
-      <!-- final start -->
+      <!-- websiteblurb2 start -->
+      <div class="two-third-width thick-padding" style="margin: 0 auto;">
+        <p class="bigger-body thin-padding">
+          To appeal to the funding partner target audience, the new website design made it clearer what PASC does, that they are interesting in funding partners and how funding was to be used. Additionally, social proof and calls to action were incorporated on each page of the website via the footer. These changes increase trust towards the organisation and streamline the process for potential funding partners (Estes & Nielsen, 2017).
+        </p>
+      </div>
+      <!-- websiteblurb2 finish -->
+
+      <!-- websitefull start -->
+      <div class="full-width small-top">
+        <img class="full-width" src="images/pasc/p-6.png" alt="">
+      </div>
+      <!-- websitefull finish -->
+
+      <!-- mobsite start -->
       <div class="full-width thick-top">
-        <img class="full-width" src="images/coral-rescue/coral-rescue-thumbnail.png" alt="">
+        <img class="full-width" src="images/pasc/p-7.png" alt="">
       </div>
-      <!-- final finish -->
+      <!-- mobsite finish -->
+
+      <!-- com blurb start -->
+      <div class="row-flex full-width mid-padding">
+        <div class="one-third-width mid-padding">
+          <h5 class="thin-padding">Communication Channels</h5>
+          <h6 class="thin-padding">Updated for visual clarity</h6>
+        </div>
+        <div class="two-third-width mid-padding bigger-body">
+          <p class="thin-padding">PASC members need to be able to find information that is most relevant in the quickest fashion available to them. Updates were made to PASC’s communication channels with this in mind:</p>
+          <p>
+            <ol>
+              <li class="thin-padding bigger-body">
+                <b>Newsletter navigation:</b> The Pānui was adjusted to include a contents section as well as skim-friendly heading banners.
+              </li>
+              <li class="thin-padding bigger-body">
+                <b>Streamlined Linktree:</b> The Linktree is now separated into sections with icons for easy distinguishing.
+              </li>
+              <li class="thin-padding bigger-body">
+                <b>Dynamic templates:</b> Social media posts now have a variety of template designs which will provide PASC efficiency and variety in the social media content, as well as allow their community to easily identify specific posts that are relevant to them.
+              </li>
+            </ol>
+          </p>
+        </div>
+      </div>
+      <!-- com blurb finish -->
+
+      <!-- row start -->
+      <div class="full-width row-flex">
+        <div class="half-width img-wrapper">
+          <img class="full-width rounded-img" src="images/pasc/p-8.png" alt="" style="box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);">
+        </div>
+        <div class="half-width img-wrapper">
+          <img class="full-width rounded-img" src="images/pasc/p-9.png" alt="" style="box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);">
+        </div>
+      </div>
+      <!-- row finish -->
+
+      <!-- socialmedia start -->
+      <div class="full-width thick-top">
+        <img class="full-width" src="images/pasc/p-10.png" alt="">
+      </div>
+      <!-- socialmedia finish -->
 
       <!-- references start -->
       <div class="full-width row-flex thick-padding">
@@ -342,9 +346,7 @@
           <h3>References</h3>
         </div>
         <div class="three-quarter-width citation" style="overflow-x: hidden;">
-          <p class="thin-padding">Kozak, O. (2020). <i>Analysis of illustration influence on human-computer interaction</i> [Bachelor Thesis, Ukrainian Catholic University]. <a href="https://www.researchgate.net/publication/342438044_Analysis_of_illustration_influence_on_Human-Computer_Interaction" target="_blank">https://www.researchgate.net/publication/342438044_Analysis_of_illustration_influence_on_Human-Computer_Interaction</a></p>
-          <p class="thin-padding">Luo, Y., & Lin, Y. (2017). Effects of illustration types on the English reading performance of senior high school students with different cognitive styles. <i>English Language Teaching, 10</i>(9), 1-10 <a href="http://doi.org/10.5539/elt.v10n9p1" target="_blank">http://doi.org/10.5539/elt.v10n9p1</a></p>
-          <p class="thin-padding">Yang, H., Han, J., & Min, K. (2019). Distinguishing emotional responses to photographs and artwork using a deep learning-based approach. <i>Sensors (Basel, Switzerland), 19</i>(24), 5533. <a href="http://doi.org/10.5539/elt.v10n9p1" target="_blank">http://doi.org/10.5539/elt.v10n9p1</a></p>
+          <p class="thin-padding">Estes, J., & Nielsen, J. (2017). <i>Attracting Donors and Volunteers on Non-Profit and Charity Websites (2nd ed.).</i> Nielsen Norman Group. <a href="https://www.nngroup.com/reports/attracting-donors-and-volunteers-non-profit/" target="_blank">https://www.nngroup.com/reports/attracting-donors-and-volunteers-non-profit/</a></p>
 
         </div>
       </div>
@@ -361,8 +363,8 @@
             </a>
           </div>
           <div class="one-quarter-width thin-padding">
-            <a class="extra-content-item" href="pasc.html">
-              <img class="full-width" src="images/pasc/pasc-home-mockup.png" alt="">
+            <a class="extra-content-item" href="coral-rescue.html">
+              <img class="full-width" src="images/coral-rescue/coral-rescue-thumbnail.png" alt="">
             </a>
           </div>
           <div class="half-width thin-padding">&nbsp;</div>
