--- a/coral-rescue.html
+++ b/coral-rescue.html
@@ -211,18 +211,11 @@
       </div>
       <!-- intro finish -->
 
-      <video class="full-width" src="videos/cr-v-1.mkv" muted autoplay loop></video>
-
-      <!-- images start -->
-      <div class="full-width row-flex mid-padding">
-        <div class="img-wrapper three-fifth-width">
-          <img class="full-width rounded-img" src="images/coral-rescue/cr-3.png" alt="">
-        </div>
-        <div class="img-wrapper two-fifth-width">
-          <img class="full-width rounded-img" src="images/coral-rescue/cr-4.png" alt="">
-        </div>
+      <!-- sketches start -->
+      <div class="full-width mid-top">
+        <img class="full-width" src="images/coral-rescue/cr-5.png" alt="">
       </div>
-      <!-- images finish -->
+      <!-- sketches finish -->
 
       <!-- method start -->
       <div class="row-flex full-width mid-padding">
@@ -237,16 +230,38 @@
       </div>
       <!-- method finish -->
 
-      <!-- sketches start -->
-      <div class="full-width mid-top">
-        <img class="full-width" src="images/coral-rescue/cr-5.png" alt="">
+      <div class="row-flex full-width thick-padding" style="padding-bottom:0;">
+        <h5 class="mid-padding" style="padding-bottom:0;">Illustration Creation</h5>
       </div>
-      <!-- sketches finish -->
+      
+      <!-- illustration bits start -->
+      <div class="full-width mid-top">
+        <img class="full-width" src="images/coral-rescue/cr-10.svg" alt="">
+        <img class="full-width small-top" src="images/coral-rescue/cr-11.png" alt="">
+      </div>
+      <!-- illustration bits finish -->
+
+      <!-- illustrationblurb start -->
+      <div class="two-third-width thick-padding" style="margin: 0 auto;">
+        <p class="bigger-body thin-padding">
+          Illustrations were built in vector format to allow for flexibility in creating animations and page transitions. Experimentation then followed to establish a dominant colour and build a palette.
+        </p>
+      </div>
+      <!-- illustrationblurb finish -->
+
+      <div class="row-flex full-width thick-padding" style="padding-bottom:0;">
+        <h5 class="mid-padding" style="padding-bottom:0;">Colour</h5>
+      </div>
+
+      <!-- colourtests start -->
+      <div class="full-width mid-top">
+        <img class="full-width" src="images/coral-rescue/cr-12.png" alt="">
+      </div>
+      <!-- colourtests finish -->
 
       <!-- colour start -->
       <div class="row-flex full-width mid-top">
         <div class="two-fifth-width thick-padding">
-          <h5 class="thin-padding">Colour</h5>
           <h6 class="thin-padding">Painted according to comfort & comprehensibility</h6>
           <p class="thin-padding bigger-body">
             The reality of our planet’s deterioration can be a daunting topic. With that in mind, the colour palette was crafted to make the information approachable and easy to digest. Blue takes centre stage to provide a calm, stable backdrop. The pink accents serve to draw the eye and infuse additional warmth into the scenes.
@@ -276,6 +291,19 @@
         </div>
       </div>
       <!-- colour scenes finish -->
+
+      <video class="full-width" src="videos/cr-v-1.mkv" muted autoplay loop></video>
+
+      <!-- images start -->
+      <div class="full-width row-flex mid-padding">
+        <div class="img-wrapper three-fifth-width">
+          <img class="full-width rounded-img" src="images/coral-rescue/cr-3.png" alt="">
+        </div>
+        <div class="img-wrapper two-fifth-width">
+          <img class="full-width rounded-img" src="images/coral-rescue/cr-4.png" alt="">
+        </div>
+      </div>
+      <!-- images finish -->
 
       <!-- format start -->
       <div class="row-flex full-width mid-padding">
@@ -356,8 +384,13 @@
         <div class="full-width row-flex">
 
           <div class="one-quarter-width thin-padding">
+            <a class="extra-content-item" href="her-legend.html">
+              <img class="full-width" src="images/her-legend/her-legend-thumbnail.png" alt="">
+            </a>
+          </div>
+          <div class="one-quarter-width thin-padding">
             <a class="extra-content-item" href="nautiqua.html">
-              <img class="full-width" src="images/nautiqua/nautiqua-thumbnail.png" alt="">
+              <img class="full-width" src="images/nautiqua/nautiqua-thumbnail-2.jpg" alt="">
             </a>
           </div>
           <div class="one-quarter-width thin-padding">
@@ -391,10 +424,6 @@
           </a>
         </div>
         <div style="width:50px;">&nbsp;</div>
-      </div>
-
-      <div style="margin-bottom:40px;">
-        <p class="two-third-width"><i>The work contained in this portfolio is created for educational purposes only and does not contain any commercial value. All rights remain with the individual copyright holders unless specified and used with permission.</i></p>
       </div>
 
       <div class="copyright">
