--- a/index.html
+++ b/index.html
@@ -133,6 +133,28 @@
     <!-- sections start -->
     <div class="project-list">
 
+        <!-- herlegend start -->
+        <section class="row-flex">
+          <div id="bg-her-legend-case-study" class="three-fifth-width">
+          </div>
+          <div class="two-fifth-width section-inner">
+            <h4 class="section-item">2024</h4>
+            <h3 class="section-item">Her Legend</h3>
+            <hr>
+            <p class="section-item">Celebrating the journey of the Black Ferns through an interactive polyvocal timeline.</p>
+            <div class="section-item project-tags">
+              <div class="project-tag">Experience Design</div>
+              <div class="project-tag">UI Design</div>
+            </div>
+            <div class="section-item">
+              <a href="her-legend.html">
+                <button class="case-study-btn">view case study</button>
+              </a>
+            </div>
+          </div>
+        </section>
+        <!-- herlegend finish -->
+
         <!-- nautiqua start -->
         <section class="row-flex">
           <div id="bg-nautiqua-case-study" class="three-fifth-width">
@@ -221,10 +243,6 @@
           </a>
         </div>
         <div style="width:50px;">&nbsp;</div>
-      </div>
-
-      <div style="margin-bottom:40px;">
-        <p class="two-third-width"><i>The work contained in this portfolio is created for educational purposes only and does not contain any commercial value. All rights remain with the individual copyright holders unless specified and used with permission.</i></p>
       </div>
 
       <div class="copyright">
