--- a/nautiqua.html
+++ b/nautiqua.html
@@ -319,6 +319,30 @@
       </div>
       <!-- audience finish -->
 
+      <div class="row-flex full-width thick-padding" style="padding-bottom:0;">
+        <h5 class="mid-padding" style="padding-bottom:0;">Ideation</h5>
+      </div>
+
+      <!-- sketches start -->
+      <div class="full-width mid-top">
+        <img class="full-width" src="images/nautiqua/n-6.png" alt="">
+      </div>
+      <!-- sketches finish -->
+
+      <div class="row-flex full-width thick-padding" style="padding-bottom:0;">
+        <h5 class="mid-padding" style="padding-bottom:0;">Concept Development</h5>
+      </div>
+
+      <!-- sketches start -->
+      <div class="full-width mid-top">
+        <img class="full-width" src="images/nautiqua/n-7.png" alt="">
+      </div>
+      <!-- sketches finish -->
+
+      <div class="row-flex full-width thick-padding" style="padding-bottom:0;">
+        <h5 class="mid-padding" style="padding-bottom:0;">Final Outcome</h5>
+      </div>
+
       <!-- product start -->
       <div id="nautiqua-product" class="mid-top row-flex white-text full-width mid-padding">
       </div>
@@ -420,6 +444,11 @@
         <div class="full-width row-flex">
 
           <div class="one-quarter-width thin-padding">
+            <a class="extra-content-item" href="her-legend.html">
+              <img class="full-width" src="images/her-legend/her-legend-thumbnail.png" alt="">
+            </a>
+          </div>
+          <div class="one-quarter-width thin-padding">
             <a class="extra-content-item" href="coral-rescue.html">
               <img class="full-width" src="images/coral-rescue/coral-rescue-thumbnail.png" alt="">
             </a>
@@ -455,10 +484,6 @@
           </a>
         </div>
         <div style="width:50px;">&nbsp;</div>
-      </div>
-
-      <div style="margin-bottom:40px;">
-        <p class="two-third-width"><i>The work contained in this portfolio is created for educational purposes only and does not contain any commercial value. All rights remain with the individual copyright holders unless specified and used with permission.</i></p>
       </div>
 
       <div class="copyright">
