--- a/pasc.html
+++ b/pasc.html
@@ -358,8 +358,13 @@
         <div class="full-width row-flex">
 
           <div class="one-quarter-width thin-padding">
+            <a class="extra-content-item" href="her-legend.html">
+              <img class="full-width" src="images/her-legend/her-legend-thumbnail.png" alt="">
+            </a>
+          </div>
+          <div class="one-quarter-width thin-padding">
             <a class="extra-content-item" href="nautiqua.html">
-              <img class="full-width" src="images/nautiqua/nautiqua-thumbnail.png" alt="">
+              <img class="full-width" src="images/nautiqua/nautiqua-thumbnail-2.jpg" alt="">
             </a>
           </div>
           <div class="one-quarter-width thin-padding">
@@ -393,10 +398,6 @@
           </a>
         </div>
         <div style="width:50px;">&nbsp;</div>
-      </div>
-
-      <div style="margin-bottom:40px;">
-        <p class="two-third-width"><i>The work contained in this portfolio is created for educational purposes only and does not contain any commercial value. All rights remain with the individual copyright holders unless specified and used with permission.</i></p>
       </div>
 
       <div class="copyright">
